# keyhotee

./: .gitignore  ATopLevelWindow.cpp  ATopLevelWindow.h  ATopLevelWindow.hpp  ATopLevelWindowsContainer.cpp  ATopLevelWindowsContainer.h  ATopLevelWindowsContainer.hpp  AddContactDialog.ui  BUILD_OSX.md  BUILD_WIN32.md  CMakeLists.txt  ConnectionProcessor.cpp  ConnectionProcessor.hpp  ContactListEdit.cpp  ContactListEdit.hpp  EditContactDialog.cpp  EditContactDialog.hpp  EditContactDialog.ui  GitSHA1.cpp.in  GitSHA1.h  Keyhotee.qrc  Keyhotee.qrc.depends  Keyhotee.rc  KeyhoteeApplication.cpp  KeyhoteeApplication.hpp  KeyhoteeMainWindow.cpp  KeyhoteeMainWindow.hpp  KeyhoteeMainWindow.ui  LoginDialog.cpp  LoginDialog.hpp  LoginDialog.ui  MenuEditControl.cpp  MenuEditControl.hpp  README.md  TreeWidgetCustom.cpp  TreeWidgetCustom.hpp  bitsharesguiprecomp.h  bootstrap_mac_dmg.sh  build_berkeleydb.sh  build_icu.bat  (+36 more)
AddressBook/: AddressBookModel.cpp  AddressBookModel.hpp  AuthorizationItem.cpp  AuthorizationItem.hpp  Contact.cpp  Contact.hpp  ContactCompleterModel.cpp  ContactCompleterModel.hpp  ContactGui.cpp  ContactGui.hpp  ContactView.cpp  ContactView.hpp  ContactView.ui  ContactsTable.cpp  ContactsTable.hpp  ContactsTable.ui  ContactvCard.cpp  ContactvCard.hpp  IdentitiesUpdate.hpp  LineEditReadOnly.cpp  LineEditReadOnly.hpp  NewIdentityDialog.cpp  NewIdentityDialog.hpp  NewIdentityDialog.ui  RequestAuthorization.cpp  RequestAuthorization.hpp  RequestAuthorization.ui  TableViewCustom.cpp  TableViewCustom.hpp  authorization.cpp  authorization.hpp  authorization.ui  keyhoteeidpubkeywidget.cpp  keyhoteeidpubkeywidget.hpp  keyhoteeidpubkeywidget.ui
CmakeModules/: FindICU.cmake  FindXKB.cmake
CrashRpt/include/: CrashRpt.h  CrashRptProbe.h
CrashRpt/lib/: CrashRpt1400.exp  CrashRpt1400.lib  CrashRpt1400d.exp  CrashRpt1400d.lib  CrashRpt1402.lib
HelperScripts/: VC-32.pl.patch  build_openssl.bat  jenkins-linux-config.xml  jenkins-osx-config.xml  jenkins-win32-config.xml  jenkins_build.bat  jenkins_build.sh
HelperScripts/qt-mkspecs/linux-syncad-g++/: qmake.conf
HelperScripts/toolchain/: .config  readme.txt
Identity/: IdentitiesUpdate.hpp  IdentityObservable.cpp  IdentityObservable.hpp  IdentitySelection.cpp  IdentitySelection.hpp  IdentitySelection.ui
Mail/: BlockedContentAlert.cpp  BlockedContentAlert.hpp  BlockedContentAlert.ui  BlockerDelegate.hpp  FileAttachmentDialog.cpp  FileAttachmentDialog.hpp  FileAttachmentDialog.ui  InboxModel.cpp  InboxModel.hpp  MailEditor.cpp  MailEditor.hpp  MailInbox.cpp  MailInbox.hpp  MailInbox.ui  MailTable.cpp  MailTable.hpp  MailViewer.cpp  MailViewer.hpp  MailViewer.ui  Mailbox.cpp  Mailbox.hpp  Mailbox.ui  MailboxModel.cpp  MailboxModel.hpp  MailboxModelRoot.cpp  MailboxModelRoot.hpp  MessageHeader.hpp  RepliedMailPattern.html  ShowColumnAction.cpp  ShowColumnAction.hpp  TMessageEdit.cpp  TMessageEdit.hpp  TableWidgetAttachments.cpp  TableWidgetAttachments.hpp  fileattachmentwidget.cpp  fileattachmentwidget.hpp  fileattachmentwidget.ui  maileditorwindow.cpp  maileditorwindow.hpp  maileditorwindow.ui  (+6 more)
MailEditor/: MailEditor.cpp  MailEditor.hpp
Options/: OptionsDialog.cpp  OptionsDialog.h  OptionsDialog.ui
Wallets/: DefaultWallets.xml  ManageWallet.cpp  ManageWallet.hpp  ManagedStream.cpp  ManagedStream.hpp  Wallets.xsd  WalletsGui.cpp  WalletsGui.hpp  XmlMessageHandler.cpp  XmlMessageHandler.hpp  XmlWalletsReader.cpp  XmlWalletsReader.hpp  transactionhistorymodel.cpp  transactionhistorymodel.hpp  wallets.cpp  wallets.hpp  wallets.ui  wallettransaction.hpp
bitshares_toolkit/libraries/api/ruby_generator/templates/: network_api.coffee.tmpl
bitshares_toolkit/programs/client/: htdocs
ch/: GuiUpdateSink.hpp  ModificationsChecker.hpp  authprocessor.hpp  connectionstatusds.h  mailprocessor.hpp
images/: keyhotee.icns  shield1024.icns
images/128x128/: icons_source.txt
images/48x48/: icons_source.txt
miner/: CMakeLists.txt  base64.hpp  bitcoin.cpp  bitcoin.hpp  coyote_miner.bat  fast_momentum.cpp  getwork_miner.cpp  hashtable.hpp  miner.cpp  momentum.hpp  server.cpp  sha2.cpp  user_database.hpp  work_message.hpp
miner/sphlib-3.0/c/: md4.c  md5.c  sha0.c  test_blake.c  test_bmw.c  test_cubehash.c  test_digest_helper.c  test_echo.c  test_fugue.c  test_groestl.c  test_hamsi.c  test_haval.c  test_jh.c  test_keccak.c  test_luffa.c  test_md2.c  test_md4.c  test_md5.c  test_panama.c  test_radiogatun.c  test_ripemd.c  test_sha0.c  test_sha1.c  test_sha2.c  test_sha2big.c  test_shabal.c  test_shavite.c  test_simd.c  test_skein.c  test_tiger.c  test_types.c  test_whirlpool.c  tiger.c  utest.c  utest.h
profile_wizard/: ProfileEditPage.ui  ProfileIntroPage.ui  ProfileNymPage.ui  ProfileWizard.cpp  ProfileWizard.hpp
qtreusable/: AutoUpdateProgressBar.cpp  AutoUpdateProgressBar.hpp  HeaderWidget.cpp  HeaderWidget.hpp  HeaderWidget.ui  InfoBar.cpp  InfoBar.hpp  LoginInputBox.cpp  LoginInputBox.hpp  LoginInputBox.ui  MimeDataChecker.cpp  MimeDataChecker.hpp  TImage.cpp  TImage.hpp  selfsizingmainwindow.cpp  selfsizingmainwindow.h  selfsizingwidget.cpp  selfsizingwidget.h
translations/: keyhotee_es.ts  keyhotee_es_CL.ts  keyhotee_pl_PL.ts  keyhotee_pt_PT.ts  keyhotee_zh_CN.ts
vCard/: LICENSE  libvcard_global.h  vcard.cpp  vcard.h  vcardparam.cpp  vcardparam.h  vcardproperty.cpp  vcardproperty.h
